--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,15 +1,22 @@
+@import '~react-md/src/scss/react-md';
+
 .about-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
 
     .about-img {
+        border-width: 3pt;
+        border-color: $md-light-blue-500;
+        border-style: solid;
         border-radius: 50%;
-        width: 300px;
-        height: 300px;
+        width: 150px;
+        height: 150px;
         margin: 10px 0;
+        padding: 0px;
 
         @media (max-width: 360px - 1px) {
+            background-color: $md-light-blue-500;
             padding: 20px;
         }
     }
